--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -94,3 +94,23 @@
       #done {
         background-color: #018b01;
       }
+
+      .task {
+        background-color: white;
+        margin: 0.2rem 0rem 0.3rem 0rem;
+        border: 0.1rem solid black;
+        border-radius: 0.2rem;
+        padding: 0.5rem 0.2rem 0.5rem 2rem;
+      }
+      
+      #task-button {
+        margin: 0.2rem 0rem 0.1rem 0rem;
+        background-color: white;
+        border-radius: 0.2rem;
+        width: 100%;
+        border: 0.25rem solid black;
+        padding: 0.5rem 2.7rem;
+        border-radius: 0.3rem;
+        font-size: 1rem;
+      }
+      
