--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -60,14 +60,6 @@
         font-family: sans-serif;
       }
       
-      .kanban-heading-text {
-        font-size: 1.8rem;
-        background-color: tomato;
-        padding: 0.8rem 1.7rem;
-        border-radius: 0.5rem;
-        margin: 1rem;
-      }
-
       .kanban-board {
         display: flex;
         flex-direction: row;
@@ -75,7 +67,8 @@
         font-family: sans-serif;
       }
       
-      .kanban-block {
+      .kanban-block,
+      .create-new-task-block {
         padding: 0.6rem;
         width: 30.5%;
         min-width: 14rem;
@@ -89,12 +82,14 @@
       
       #inprogress {
         background-color: #ffaf00;
+        /* display: none; */
       }
       
       #done {
         background-color: #018b01;
+        /* display: none; */
       }
-
+      
       .task {
         background-color: white;
         margin: 0.2rem 0rem 0.3rem 0rem;
@@ -112,5 +107,62 @@
         padding: 0.5rem 2.7rem;
         border-radius: 0.3rem;
         font-size: 1rem;
+      }
+      
+      .create-new-task-block {
+        display: none;
+        /* display: flex; */
+        background: #ffaf00;
+        width: 64.4%;
+        flex-direction: column;
+      }
+      
+      .form-row {
+        display: flex;
+        flex-direction: row;
+        margin: 0.2rem;
+      }
+      
+      .form-row-label {
+        width: 15%;
+        padding: 0.2rem;
+        padding-right: 0.5rem;
+        border: 0.1rem solid black;
+        border-right: 0;
+        border-radius: 0.2rem 0rem 0rem 0.2rem;
+      }
+      
+      .form-row-input {
+        border: 0.1rem solid black;
+        border-radius: 0rem 0.2rem 0.2rem 0rem;
+        width: 85%;
+      }
+      
+      textarea {
+        resize: none;
+      }
+      
+      .form-row-buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 0.2rem;
+      }
+      
+      #edit-button,
+      #save-button,
+      #cancel-button {
+        margin: 0.2rem 0rem 0.1rem 0rem;
+        background-color: white;
+        border-radius: 0.2rem;
+        width: 49.2%;
+        border: 0.25rem solid black;
+        padding: 0.5rem 2.7rem;
+        border-radius: 0.3rem;
+        font-size: 1rem;
+      }
+      
+      #edit-button {
+        display: none;
       }
       
