--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -63,7 +63,7 @@
       .kanban-board {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        /*justify-content: space-between;*/
         font-family: sans-serif;
       }
       
@@ -73,20 +73,20 @@
         width: 30.5%;
         min-width: 14rem;
         min-height: 4.5rem;
-        border-radius: 0.3rem;
+        border-radius: 1rem;
       }
       
       #todo {
-        background-color: #fec6d1;
+        background-color: #CCCCCC;
       }
       
       #inprogress {
-        background-color: #ffaf00;
+        background-color: #CCCCCC;
         /* display: none; */
       }
       
       #done {
-        background-color: #018b01;
+        background-color: #CCCCCC;
         /* display: none; */
       }
       
