--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -95,7 +95,7 @@
         margin: 0.2rem 0rem 0.3rem 0rem;
         border: 0.1rem solid black;
         border-radius: 0.2rem;
-        padding: 0.5rem 0.2rem 0.5rem 2rem;
+        padding: 0.5rem 0.2rem 3rem 2rem;
       }
       
       #task-button {
@@ -165,4 +165,9 @@
       #edit-button {
         display: none;
       }
-      
+
+
+      h2 { 
+        color: #E60000 !important; 
+        text-align: center;
+    }
