--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -97,16 +97,11 @@
         border-radius: 0.2rem;
         padding: 0.5rem 0.2rem 3rem 2rem;
       }
-      
+
       #task-button {
-        margin: 0.2rem 0rem 0.1rem 0rem;
-        background-color: white;
-        border-radius: 0.2rem;
-        width: 100%;
-        border: 0.25rem solid black;
-        padding: 0.5rem 2.7rem;
-        border-radius: 0.3rem;
-        font-size: 1rem;
+        background:  transparent;
+        border: none; 
+        font-size:35px;
       }
       
       .create-new-task-block {
