--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -1,171 +1,190 @@
+/* Styles for the sidebar navigation */
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #CCCCCC;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
 
-    /* Styles for the sidebar navigation */
-    .sidenav {
-        height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #CCCCCC;
-        overflow-x: hidden;
-        transition: 0.5s;
-        padding-top: 60px;
-    }
-    
-    .sidenav a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-        transition: 0.3s;
-    }
-    
-    .sidenav a:hover {
-        color: #f1f1f1;
-    }
-    
-    .sidenav .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-    }
-    
-    #main {
-        transition: margin-left .5s;
-        padding: 16px;
-    }
-    
-    @media screen and (max-height: 450px) {
-        .sidenav {padding-top: 15px;}
-        .sidenav a {font-size: 18px;}
-    }
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
 
-    /* Styles for the kanbanboard */
-    .container {
-        width: 70%;
-        min-width: 50%;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-      }
-      
-      .kanban-board {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        font-family: sans-serif;
-      }
-      
-      .kanban-block,
-      .create-new-task-block {
-        padding: 0 0 1em 0;
-        width: 30.5%;
-        min-width: 14rem;
-        min-height: 4.5rem;
-        border-radius: 1rem;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Makes a shadow along the border*/
-      }
-      
-      #todo {
-        background-color: #FFFFFF;
-      }
-      
-      #inprogress {
-        background-color: #FFFFFF;
-        /* display: none; */
-      }
-      
-      #done {
-        background-color: #FFFFFF;
-        /* display: none; */
-      }
-      
-      .task {
-        background-color: #FFFFFF;
-        margin: 0.3em 0.8em 0.2em 0.8em;
-        /* border: 0.1rem solid black; */
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Makes a shadow along the border*/
-        border-radius: 0.2rem;
-        padding: 0.5rem 0.2rem 3rem 2rem;
-      }
+.sidenav a:hover {
+  color: #f1f1f1;
+}
 
-      #task-button {
-        background:  transparent;
-        border: none; 
-        font-size:35px;
-        margin-left: 0.3em; 
-      }
-      
-      .create-new-task-block {
-        display: none;
-        /* display: flex; */
-        background: #ffaf00;
-        width: 64.4%;
-        flex-direction: column;
-      }
-      
-      .form-row {
-        display: flex;
-        flex-direction: row;
-        margin: 0.2rem;
-      }
-      
-      .form-row-label {
-        width: 15%;
-        padding: 0.2rem;
-        padding-right: 0.5rem;
-        border: 0.1rem solid black;
-        border-right: 0;
-        border-radius: 0.2rem 0rem 0rem 0.2rem;
-      }
-      
-      .form-row-input {
-        border: 0.1rem solid black;
-        border-radius: 0rem 0.2rem 0.2rem 0rem;
-        width: 85%;
-      }
-      
-      textarea {
-        resize: none;
-      }
-      
-      .form-row-buttons {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin: 0.2rem;
-      }
-      
-      #edit-button,
-      #save-button,
-      #cancel-button {
-        margin: 0.2rem 0rem 0.1rem 0rem;
-        background-color: white;
-        border-radius: 0.2rem;
-        width: 49.2%;
-        border: 0.25rem solid black;
-        padding: 0.5rem 2.7rem;
-        border-radius: 0.3rem;
-        font-size: 1rem;
-      }
-      
-      #edit-button {
-        display: none;
-      }
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
 
-      h2 { 
-        padding: 20px 20px 5px 5px; 
-        background-color: #E60000 !important; 
-        color: #FFFFFF !important; 
-        border-top-left-radius: 0.5em;
-        border-top-right-radius: 0.5em;
-        /* text-align: center; */
-    }
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
 
-    .backlogTitle, .inProgressTitle, .doneTitle {
-      margin-left: 1em;
-    }
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+
+/* Styles for the kanbanboard */
+.container {
+  width: 70%;
+  min-width: 50%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.kanban-board {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-family: sans-serif;
+}
+
+.kanban-block,
+.create-new-task-block {
+  padding: 0 0 1em 0;
+  width: 30.5%;
+  min-width: 14rem;
+  min-height: 4.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* Makes a shadow along the border*/
+}
+
+#todo {
+  background-color: #FFFFFF;
+}
+
+#inprogress {
+  background-color: #FFFFFF;
+  /* display: none; */
+}
+
+#done {
+  background-color: #FFFFFF;
+  /* display: none; */
+}
+
+.task {
+  background-color: #FFFFFF;
+  margin: 0.3em 0.8em 0.2em 0.8em;
+  /* border: 0.1rem solid black; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  /* Makes a shadow along the border*/
+  border-radius: 0.2rem;
+  padding: 0.5rem 0.2rem 3rem 2rem;
+  border-left: solid #E60000 0.3em;
+}
+
+#task-button {
+  background: transparent;
+  border: none;
+  font-size: 35px;
+  margin-left: 0.3em;
+}
+
+.create-new-task-block {
+  display: none;
+  /* display: flex; */
+  background: #CCCCCC;
+  width: 64.4%;
+  flex-direction: column;
+}
+
+.form-row {
+  display: flex;
+  flex-direction: row;
+  margin: 0.2rem;
+}
+
+.form-row-label {
+  width: 15%;
+  padding: 0.2rem;
+  padding-right: 0.5rem;
+  border: 0.1rem solid black;
+  border-right: 0;
+  border-radius: 0.2rem 0rem 0rem 0.2rem;
+}
+
+.form-row-input {
+  border: 0.1rem solid black;
+  border-radius: 0rem 0.2rem 0.2rem 0rem;
+  width: 85%;
+}
+
+textarea {
+  resize: none;
+}
+
+.form-row-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0.2rem;
+}
+
+#edit-button,
+#save-button,
+#cancel-button {
+  margin: 0.2rem 0rem 0.1rem 0rem;
+  background-color: white;
+  border-radius: 0.2rem;
+  width: 49.2%;
+  border: 0.25rem solid black;
+  padding: 0.5rem 2.7rem;
+  border-radius: 0.3rem;
+  font-size: 1rem;
+}
+
+#edit-button {
+  display: none;
+}
+
+h2 {
+  padding: 20px 20px 5px 5px;
+  background-color: #E60000 !important;
+  color: #FFFFFF !important;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  /* text-align: center; */
+}
+
+.backlogTitle,
+.inProgressTitle,
+.doneTitle {
+  margin-left: 1em;
+}
+
+/* Add a new Story block */
+
+#task-name {
+  border-radius: 0.3em; 
+}
+
+.taskName-box {
+  justify-content: center;
+}
