Login and Registration Form
Done login and Registration, Bug: Overflow hidden doesent work.

--- a/project/src/main/resources/static/styles/Starter_Page_styles.css
+++ b/project/src/main/resources/static/styles/Starter_Page_styles.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
 .hero{
    height: 100%;
    width: 100%;
@@ -14,7 +20,7 @@
     margin:  6% auto;
     background: #fff;
     padding: 5px;
-
+    overflow: hidden;
 }
 
 /*Top Buttons + Shadow*/
@@ -22,7 +28,7 @@
     width: 220px;
     margin: 35px auto;
     position:relative;
-    box-shadow: 0 0 20px 2px #E60000;
+    box-shadow: 0 0 20px 0.5px #E60000;
     border-radius: 30px;
 }
 .toggle-btn{
@@ -32,4 +38,55 @@
     border: 0;
     outline: none;
     position: relative;
+}
+
+/*Top Button Colour Transition*/
+#btn{
+    top:0;
+    left:0;
+    position: absolute;
+    width: 110px;
+    height: 100%;
+    background: linear-gradient(to right, #CCCCCC, #E60000);
+    border-radius: 30px;
+    transition: .5s;
+}
+
+/*Input Design*/
+.input-group{
+    top:300px;
+    position: absolute;
+    width: 280px;
+    transition: .5s;
+}
+.input-field{
+    width: 100%;
+    padding: 10px 0;
+    margin: 5px 0;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    border-bottom: 1px solid #999;
+    outline: none;
+    background: transparent;
+}
+.submit-btn{
+    width: 85%;
+    padding: 10px 30px;
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    background: linear-gradient(to right, #CCCCCC, #E60000);
+    border: 0;
+    outline: none;
+    border-radius: 30px;
+
+}
+
+/*The 2 Forms*/
+#login{
+    left: 600px;
+}
+#register{
+    left: 1000px;
 }
