--- a/project/src/main/resources/static/styles/Starter_Page_styles.css
+++ b/project/src/main/resources/static/styles/Starter_Page_styles.css
@@ -7,15 +7,22 @@
 .hero{
    height: 100%;
    width: 100%;
-   background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(ubs_norm.png);
+   background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4))/*, url(ubs_norm.png)*/;
    background-position: center;
    background-size: cover;
    position: absolute;
 }
 
+#logo{
+    width: 60%;
+    position:absolute;
+    margin-left: 15%;
+    margin-top: 12px;
+}
+
 .form-box{
-    width: 380px;
-    height: 480px;
+    width: 400px;
+    height: 500px;
     position: relative;
     margin:  6% auto;
     background: #fff;
@@ -26,10 +33,10 @@
 /*Top Buttons + Shadow*/
 .button-box{
     width: 220px;
-    margin: 35px auto;
+    margin: 150px auto;
     position:relative;
-    box-shadow: 0 0 20px 0.5px #E60000;
-    border-radius: 30px;
+    box-shadow: 0 4px 6px 0.5px rgba(0, 0, 0, 0.02), 0 4px 10px 0 rgba(0, 0, 0, 0.10);
+    border-radius: 10px;
 }
 .toggle-btn{
     padding: 10px 30px;
@@ -42,19 +49,18 @@
 
 /*Top Button Colour Transition*/
 #btn{
-    top:0;
     left:0;
     position: absolute;
     width: 110px;
     height: 100%;
-    background: linear-gradient(to right, #CCCCCC, #E60000);
-    border-radius: 30px;
+    background:rgba(230,0,0,0.8);
+    border-radius: 10px;
     transition: .5s;
 }
 
 /*Input Design*/
 .input-group{
-    top:300px;
+    top:240px;
     position: absolute;
     width: 280px;
     transition: .5s;
@@ -66,7 +72,7 @@
     border-left: 0;
     border-right: 0;
     border-top: 0;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #b0b0b0;
     outline: none;
     background: transparent;
 }
@@ -76,17 +82,20 @@
     cursor: pointer;
     display: block;
     margin: auto;
-    background: linear-gradient(to right, #CCCCCC, #E60000);
+    margin-top: 5%;
+    background: rgba(230,0,0,0.8);
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
     border: 0;
     outline: none;
-    border-radius: 30px;
+    border-radius: 10px;
 
 }
 
 /*The 2 Forms*/
 #login{
-    left: 600px;
+    left: 50px;
+    top: 255px;
 }
 #register{
-    left: 1000px;
+    left: 450px;
 }
