--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -188,8 +188,14 @@ In progress...
 }
 
 .taskName-box {
-  /*justify-content: ;*/
+  /*justify-content: ;
+.example-dropzone {
+  background-color: #6DB65B;
+  flex-basis: 100%;
+  flex-grow: 1;
+  padding: 10px;
 }
+*/
 
 .story-table{
   min-height: 85%;
@@ -202,11 +208,5 @@ In progress...
   border-color: black;
 }
 
-.example-dropzone {
-  background-color: #6DB65B;
-  flex-basis: 100%;
-  flex-grow: 1;
-  padding: 10px;
-}
-*/
+
 
