--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -169,3 +169,10 @@ h2 {
 .story-border{
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.edit:after { 
+  content: '\2807';
+  font-size: 20px; 
+  float: right; 
+  justify-items: top;
+}
