--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -158,7 +158,8 @@ h2 {
 
 #save-button,
 #cancel-button,
-#delete-button {
+#delete-button,
+#update-button {
   border-radius: 0.2rem;
   border-radius: 0.3rem;
   font-size: 1rem;
@@ -167,11 +168,13 @@ h2 {
   margin-top:5px;
 }
 
-#delete-button {
+#delete-button,
+#save-button {
   display: none;
 }
 
-#storyNameForm {
+#storyNameForm,
+#descritptionForm {
   border-radius: 0.2em;
   border: solid 0.1em rgba(0, 0, 0, 0.2);
   padding: 0;
@@ -179,18 +182,8 @@ h2 {
   width: 98%;
   margin-top: 5px !important;
   display: block;
-}
-#descritptionForm {
-  display: block;
-  margin-left: 5px;
-  margin-top: 5px;
-  width: 98%;
   resize: none;
 }
-
-/* Make the drag and drop look nice ----------------------------------*/
-/*In progress...*/
-
 
 .story-border{
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
