--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -137,7 +137,6 @@ h2 {
 .create-new-task-block {
   background-color: #FFFFFF;
   margin: 0.3em 0.8em 0.2em 0.8em;
-  border: 0.1rem solid black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 0.2rem;
   border-left: solid #E60000 0.3em;
@@ -164,8 +163,7 @@ h2 {
   border-radius: 0.3rem;
   font-size: 1rem;
   background-color: #E60000;
-  margin-left: 5px;
-  margin-top:5px;
+  justify-content: center;
 }
 
 #delete-button,
