--- a/project/src/main/resources/static/styles/dashboard_styles.css
+++ b/project/src/main/resources/static/styles/dashboard_styles.css
@@ -1,11 +1,17 @@
 .column1{
     text-align: center;
     display: inline-block;
-    margin-left: 45%;
+    margin-left: 10%;
 }
+
+/*Account Button*/
 .column2{
     float: right;
-    width: 5%;
+    width: 8%;
+    height: 2em;
+    cursor: pointer;
+    font-family: "Open Sans", sans-serif;
+    background-color: #B0B0B0;
 }
 
 /* Styles for the sidebar navigation */
@@ -127,9 +133,9 @@
   .btn-add {
     width: 6em;
     height: 2em;
-    font-size: 1.5em;
+    font-size: 1em;
     border: none;
-    background-color: #2962ff;
+    background-color: #E60000;
     color: white;
     cursor: pointer;
     font-family: "Open Sans", sans-serif;
@@ -177,17 +183,19 @@
   .row {
     background-color: oldlace;
     border-bottom: 1px black solid;
-    border-radius: 15px;
+    border-radius: 5px;
     border-left: 1px black solid;
     border-right: 1px black solid;
     margin-top: 5px;
     width: 33.3%;
-    padding-left: 10px;
+    padding-left: 5px;
     display: inline-grid;
+    height: 8em;
   }
   .grid-container {
     display: grid;
     grid-column-start: 3;
     grid-column-end: 3;
     grid-template-columns: auto auto auto;
+    gap: 10px;
   }
