--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -136,7 +136,6 @@ h2 {
 
 .create-new-task-block {
   background-color: #FFFFFF;
-  margin: 0.3em 0.8em 0.2em 0.8em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 0.2rem;
   border-left: solid #E60000 0.3em;
@@ -148,8 +147,8 @@ h2 {
   height: 23%;
   width: 26%;
   transform: translate(78%, 60%);
-  padding-top: 15px;
-  max-height: 23%;
+  padding: 0.5rem 2rem 1rem 2rem;
+  max-height: 30%;
   min-height: 218px;
   max-width: 26%;
   min-width: 495px;
