--- a/project/src/main/resources/static/styles/Starter_Page_styles.css
+++ b/project/src/main/resources/static/styles/Starter_Page_styles.css
@@ -27,7 +27,7 @@
     background: #fff;
     padding: 5px;
     overflow: hidden;
-    box-shadow: 0px 0px 3px 0.1px;
+    box-shadow: 0px 6px 20px 0px rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19);
     border-radius: 12px;
   }
 /*Top Buttons + Shadow*/
