--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -139,10 +139,12 @@ h2 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 0.2rem;
   border-left: solid #E60000 0.5em;
-  cursor: pointer;
-  height: auto;
   display: none;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   z-index: 1000;
+
   position: absolute; 
   height: 50%;
   width: 26%;
