--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -114,7 +114,7 @@
 }
 
 #task-button:hover {
-  background-color: rgba(0, 0, 0, 0.19);
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 h2 {
@@ -144,20 +144,19 @@ h2 {
   align-items: center;
   text-align: center;
   z-index: 1000;
-
   position: absolute; 
   height: 50%;
   width: 26%;
   transform: translate(78%, 60%);
-  padding: 3rem 2rem 1rem 2rem;
+  padding: 2rem 1rem 1rem 2rem;
   max-height: 50%;
   min-height: 218px;
   max-width: 46%;
   min-width: 495px;
 }
 
+/* Buttons: */
 #save-button,
-#cancel-button,
 #delete-button,
 #update-button {
   border-radius: 0.2rem;
@@ -165,12 +164,24 @@ h2 {
   font-size: 1rem;
   background-color: #E60000;
   justify-content: center;
+  align-items: flex-start;
 }
 
 #delete-button,
 #save-button {
   display: none;
 }
+
+#cancel-button {
+  padding-bottom: 0.5em;
+}
+
+/*
+#cancel-button:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 00.5em;
+}
+*/
 
 #storyNameForm,
 #descritptionForm,
@@ -189,7 +200,8 @@ h2 {
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.edit::after { 
+.edit::after,
+#cancel-button { 
   content: '\2807';
   font-size: 20px; 
   float: right; 
