--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -105,6 +105,10 @@
   font-size: large;
 }
 
+.dueDate {
+  font-size: 12px;
+}
+
 #task-button {
   background: transparent;
   border: none;
@@ -145,9 +149,11 @@ h2 {
   text-align: center;
   z-index: 1000;
   position: absolute; 
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   height: 50%;
   width: 26%;
-  transform: translate(78%, 60%);
   padding: 2rem 1rem 1rem 2rem;
   max-height: 50%;
   min-height: 218px;
@@ -185,21 +191,26 @@ h2 {
 
 #storyNameForm,
 #descritptionForm,
-#storyColorForm {
+#storyColorForm,
+#storyDueDate {
   border-radius: 0.2em;
   border: solid 0.1em rgba(0, 0, 0, 0.2);
   padding: 0 !important;
-  margin-left: 5px;
   width: 98%;
-  margin-top: 5px !important;
+  margin-bottom: 7px;
   display: block;
-  resize: calc(5);
+  resize: none;
 }
 
 #storyNameForm:focus,
 #descritptionForm:focus {
-  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border: 0px solid;
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  border: solid 0.1em rgba(0, 0, 0, 0.2);
+  outline: none;
+}
+
+#storyNameForm {
+  margin-top: 7px;
 }
 
 .story-border{
