--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -200,6 +200,7 @@ h2 {
   min-height: 218px;
   max-width: 46%;
   min-width: 495px;
+  z-index: 100;
 }
 
 /* Buttons: */
@@ -274,4 +275,19 @@ h2 {
   float: right; 
   justify-items: top;
   margin-top: -30px;
+}
+
+.md-backdrop{
+  position: absolute;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+z-index: -1;
+
+}
+.backdrop-state{
+  background-color: rgba(33,33,33,1.0);
+  opacity: .45;
+  z-index: 99 !important;
 }
