--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -135,6 +135,10 @@
   font-size: small;
 }
 
+.dueDateTitle {
+  font-size: 14px;
+}
+
 .closeButton {
   display: none;
   
@@ -268,6 +272,13 @@ h2 {
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.prio {
+  font-size: 20px; 
+  float: right; 
+  margin-top: -3px;
+  margin-right: 25px;
+}
+
 .edit::after,
 #cancel-button { 
   content: '\2807';
@@ -279,15 +290,22 @@ h2 {
 
 .md-backdrop{
   position: absolute;
-top: 0;
-bottom: 0;
-left: 0;
-right: 0;
-z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
 
 }
 .backdrop-state{
   background-color: rgba(33,33,33,1.0);
   opacity: .45;
   z-index: 99 !important;
+}
+
+#storyPriority {
+  float: right;
+  font-size: 30px;
+  margin-top: -30px;
+  margin-right: 15px;
 }
