--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -135,8 +135,11 @@
   font-size: small;
 }
 
-.dueDateTitle {
+.dueDateTitle,
+.definitionOfDonetitle {
+  margin-top: 8px;
   font-size: 14px;
+  font-weight: 600;
 }
 
 .closeButton {
@@ -179,6 +182,10 @@ h2 {
 .inProgressTitle,
 .doneTitle {
   margin-left: 1em;
+}
+
+.kanbanBoardTitle {
+  margin-bottom: 1em;
 }
 
 /* Add a new Story block ---------------------------------------------*/
@@ -239,7 +246,8 @@ h2 {
 #descritptionForm,
 #storyColorForm,
 #storyDueDate,
-#storyPriorityForm {
+#storyPriorityForm,
+#definitionOfDoneForm {
   border-radius: 0.2em;
   border: solid 0.1em rgba(0, 0, 0, 0.2);
   padding: 0 !important;
@@ -252,7 +260,8 @@ h2 {
 #descritptionForm:focus,
 #storyColorForm:focus,
 #storyDueDate:focus,
-#storyPriorityForm:focus  {
+#storyPriorityForm:focus,
+#definitionOfDoneForm:focus  {
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2);
   border: solid 0.1em rgba(0, 0, 0, 0.2);
   outline: none;
@@ -260,8 +269,14 @@ h2 {
 
 #descritptionForm {
   resize: vertical; 
-  max-height: 145px;
+  max-height: 147px;
   min-height: 73px;
+}
+
+#definitionOfDoneForm {
+  resize: vertical; 
+  max-height: 100px;
+  min-height: 60px;
 }
 
 #storyNameForm {
@@ -288,6 +303,16 @@ h2 {
   margin-top: -30px;
 }
 
+#storyPriority {
+  float: right;
+  font-size: 30px;
+  margin-top: -30px;
+  margin-right: 15px;
+}
+
+
+/* Make the background darker and untouchable ----------------------------------------------*/
+
 .md-backdrop{
   position: absolute;
   top: 0;
@@ -301,11 +326,4 @@ h2 {
   background-color: rgba(33,33,33,1.0);
   opacity: .45;
   z-index: 99 !important;
-}
-
-#storyPriority {
-  float: right;
-  font-size: 30px;
-  margin-top: -30px;
-  margin-right: 15px;
 }
