--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -136,10 +136,18 @@
 }
 
 .dueDateTitle,
-.definitionOfDonetitle {
+.definitionOfDonetitle,
+.storyDueDateFormTitle {
   margin-top: 8px;
   font-size: 14px;
   font-weight: 600;
+}
+
+.storyDueDateFormTitle {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-size: medium;
+  float: left; 
 }
 
 .closeButton {
