--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -145,7 +145,7 @@
 
 .storyDueDateFormTitle {
   margin-top: 0;
-  margin-bottom: 5px;
+  margin-bottom: 5px7;
   font-size: medium;
   float: left; 
 }
