--- a/project/src/main/resources/templates/html/Log-in.html
+++ b/project/src/main/resources/templates/html/Log-in.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Log-in and Registration</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="..\styles\Starter_Page_styles.css">
+        <link rel="stylesheet" href="/styles/Starter_Page_styles.css">
     </head>
     <body class="container">
         <div class="row button-box-offset center-content">
@@ -43,10 +43,12 @@
                                 <div class="row center-content">
                                     <div class="col-7 center-content form-cred">
                                         <!-- Input Login-->
-                                        <form id="login" class="input-groups  col-12">
-                                            <input type="email" class="input-field" placeholder="E-Mail" required>
-                                            <input type="password" class="input-field" placeholder="Enter Password" required>
+                                        <form id="login" class="input-groups  col-12 center-text" action="logincheck" method="post">
+                                            <input id="email" name="email" type="email" class="input-field" placeholder="E-Mail" required>
+                                            <input id="password" name="password" type="password" class="input-field" placeholder="Enter Password" required>
                                             <button type="submit" class="submit-btn" id="submit2">Log in</button>
+                                            <p id="forgottPWD">Did you forget your password?</p>
+                                            <a href="#" id="resetPWD">Reset Password</a>
                                         </form>
                                         <!--Input Register-->
                                         <form id="register" class="input-groups col-12 ">
@@ -76,7 +78,7 @@
             document.getElementById("login").style.left = "0"
             document.getElementById("temp").remove()
         </script>
-        <script type="application/javascript" src="../Scripts/login-landingpage.js"></script>
+        <script type="application/javascript" src="/Scripts/login-landingpage.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
