--- a/project/src/main/resources/templates/html/kanbanboard.html
+++ b/project/src/main/resources/templates/html/kanbanboard.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="..\styles\quentin.css">
+    <link rel="stylesheet" href="/styles/quentin.css">
     <!-- JavaScript -->
-    <script language="javascript" type="text/javascript" src="..\scripts\kanbanboard.js"></script>
+    <script language="javascript" type="text/javascript" src="/Scripts/kanbanboard.js"></script>
     <!-- CSS only Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
