--- a/project/src/main/resources/static/styles/submit_styles.css
+++ b/project/src/main/resources/static/styles/submit_styles.css
@@ -1,10 +1,3 @@
-/*Test Button*/
-#adder {
-  position: absolute;
-  right: 15px;
-  top: 15px;
-}
-
 /* Styles for the sidebar navigation */
 #tlines {
   float: left;
@@ -58,6 +51,12 @@ h1 {
   margin-bottom: 20px;
 }
 
+header{
+  border-bottom: #CCCCCC solid 1px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
 main {
   justify-content: center !important;
   align-items: center !important;
@@ -75,20 +74,81 @@ table {
 }
 
 th {
-  padding: 0 100px 0 100px; 
+  padding: 80px 100px 0 100px; 
 }
 
-/* table media query --------------------*/
-/* On screens that are 992px or less, set the background color to blue */
-@media screen and (max-width: 992px) {
+td{
+  padding-top: 5px;
+}
+
+/*Buttons*/
+.btn-view{
+  border: none;
+  color: white;
+  background-color: #E60000;
+  text-align: center;
+  display: inline-block;
+  border-radius: 2px;
+  width: 100px;
+  cursor: pointer;
+
+  transition: 0.5s;
+}
+.btn-view:hover{
+  background-color: #9A3D37;
+}
+
+/*Test Button*/
+#adder {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+
+  border: none;
+  color: white;
+  background-color: #E60000;
+  text-align: center;
+  display: inline-block;
+  border-radius: 2px;
+  height: 30px;
+  width: 80px;
+}
+
+#adder:active{
+  background-color: #9A3D37;
+}
+
+/*Spacing for bottom*/
+footer{
+  margin-top: 30px;
+}
+
+/* table media query -----------------*/
+/* On screens that are 992px or less */
+@media screen and (max-width: 1100px) {
   th {
     padding: 0 60px 0 60px; 
   }
 }
 
-/* On screens that are 600px or less, set the background color to olive */
+/* On screens that are 800px or less */
+@media screen and (max-width: 800px) {
+  th {
+    padding: 0 50px 0 50px; 
+  }
+}
+
+/* On screens that are 600px or less */
 @media screen and (max-width: 600px) {
   th {
     padding: 0 30px 0 30px; 
+  }
+}
+
+/* On screens that are 590px or less */
+@media screen and (max-width: 590px) {
+  th {
+    padding: 0 15px 0 15px; 
   }
 }
