--- a/project/src/main/resources/static/styles/createSimulation.css
+++ b/project/src/main/resources/static/styles/createSimulation.css
@@ -1,19 +1,5 @@
-body {
-    margin: 0;
-    overflow-x:hidden;
-}
 
-main {
-    padding: 0;
-}
-
-/* Header -------------*/
-
-header {
-    text-align: center;
-    padding: 1em 0 1em 0;
-    font-family: Helvetica;
-}
+/* sidenav -----------------*/
 
 .dropdown {
     position: relative;
@@ -49,121 +35,6 @@ header {
 
 .questionMark-div {
     margin-top: -3px; 
-}
-
-/* Images --------------*/
-
-#ubs-logo {
-    top: 0;
-    left: 0;
-    position: absolute;
-    margin: 10px 0 0 10px;
-    font-family: Helvetica;
-}
-
-/* Main ----------------*/
-
-#background-image {
-    text-align: center;
-    padding: 100px 0 100px 0;
-    background-image: url(../pic/geometric-elements-red-color-abstract-vector-with-transparent-background.webp);
-    background-size: 2000px;
-    background-attachment: fixed;
-    font-family: cursive;
-}
-
-article {
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: bold;
-}
-
-.row {
-    margin-top: 50px;
-}
-
-.centered {
-    text-align: center !important;
-    justify-content: center;
-}
-
-.left-aligned {
-    text-align: left;
-}
-
-.border-bottom {
-    border-bottom: 6px;
-}
-
-.button {
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    background-color: white;
-    color: black;
-    border: 2px solid #f44336;
-}
-
-.button:hover {
-    background-color: red;
-    color: white;
-}
-
-.button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-
-.button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-}
-
-.button:hover span {
-    padding-right: 25px;
-}
-
-.button:hover span:after {
-    opacity: 1;
-    right: 0;
-}
-
-
-p {
-    font-size: large;
-}
-
-.underline {
-    text-decoration: underline;
-    text-decoration-color: red;
-}
-
-h5 {
-    font-family: cursive;
-}
-
-/* Footer ----------------*/
-
-footer {
-    margin-top: 50px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #120130;
-    color: white;
-    text-align: center;
-    padding: 1em 0 1em 0;
 }
 
 /* Settings ----------------*/
@@ -282,12 +153,6 @@ th {
     background-color: rgba(211, 55, 55, 0.2);
 }
 
-#constant-settings-size, 
-#distribution-settings-size,
-#smlxl-settings-size {
-    display: none; 
-}
-
 .smlxl {
     margin-top: 20px; 
 }
@@ -299,13 +164,14 @@ th {
 /* Settings navbar -------------*/
 
 .sidebar {
-    margin: 0;
+    margin: 20px 0 0 15px;
     padding: 0;
-    width: 15%;
-    background-color: rgba(167, 164, 164, .1);
+    width: 10%;
+    min-width: max-content;
+    border-right: rgb(151, 148, 148) solid 2px;
     float: left; 
     position: fixed;
-    height: 100%;
+    height: 60%;
     overflow: auto;
 }
 
@@ -315,15 +181,22 @@ th {
     padding: 16px;
     text-decoration: none;
     cursor: pointer;
+    border-left: solid 2px rgb(241, 138, 138);
+    width: max-content;
 }
 
 .sidebar a.active {
     border-left: solid 0.3em red;
+    color: red; 
 }
 
 .sidebar a:hover:not(.active) {
-    background-color: rgb(177, 177, 177);
-    color: white;
+    color: rgb(241, 138, 138); 
+    border-left: solid 3px rgb(241, 138, 138);
+}
+
+.nav-title {
+    font-weight: bold;
 }
 
 @media screen and (max-width: 700px) {
@@ -331,19 +204,35 @@ th {
         width: 100%;
         height: auto;
         position: relative;
+        margin: 0;
+        border-bottom: rgb(151, 148, 148) solid 2px;
+        height: 100%;
+        width: 100%;
     }
 
     .sidebar a {
         float: left;
+        border: none; 
+        border-top: solid 2px rgb(241, 138, 138);
     }
 
     .tabcontent {
         margin-left: 7px !important;
+        margin-top: 5px; 
     }
 
     .sidebar a.active {
         border-top: solid 0.3em red;
         border-left: none;
+    }
+
+    .sidebar a:hover:not(.active) {
+        border: none; 
+        border-top: solid 3px rgb(241, 138, 138);
+    }
+
+    .nav-title {
+        display: none;
     }
 }
 
@@ -361,20 +250,12 @@ th {
 
 .tabcontent {
     margin-left: 17%;
+    margin-top: 30px; 
 }
 
-.footerlink a {
-    color: white;
-    text-decoration: none;
-}
-
-.center {
-    display: flex block;
-    justify-content: center;
-    align-items: center;
-}
-
-.res {
-    width: 50%;
-    text-align: left !important;
+.temp {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 300px;
 }
