--- a/project/src/main/resources/static/styles/quentin.css
+++ b/project/src/main/resources/static/styles/quentin.css
@@ -67,7 +67,6 @@
 .kanban-block {
   padding: 0 0 1em 0;
   font-size: 150% !important;;
-
   min-height: 4.5rem;
   border-radius: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -343,3 +342,5 @@ h2 {
 #board-table {
   display: table;
 }
+
+.done-doing-width{width: 50%;}
